Fix FTBFS on freebsd kernel

Set HOST_NAME_MAX to 255 if this is not already defined in the headers.
sysconf(3) manpage indicates that this values shouldn't be less than
255.

http://bugs.freedesktop.org/show_bug.cgi?id=66456